fix: reconcile go and js specs
