# apps/go/internal/model/problem.go
@@ -8,10 +8,10 @@ import (
 
 // RFC 9457 application/problem+json
 type Problem struct {
-	Title  string `json:"title"`
-	Status int    `json:"status"`
+	Title  string `json:"title" binding:"required"`
+	Status int    `json:"status" binding:"required"`
 	Detail string `json:"detail,omitempty"`
-}
+} // @name Problem
 
 func AbortProblem(ctx *gin.Context, status int, detail string) {
 	ctx.Header("Content-Type", "application/problem+json")
